@@ -1,0 +1,10 @@
+Title: Sidebar: Bottom of last snapin was not 100% visible
+Level: 1
+Component: multisite
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i3p1
+Date: 1482246812
+
+
